Update 'go-mcjolxjg' component image to: quay.io/rhtap_qe/go-mcjolxjg:495c48d9c39694417206eaaaabf647b909a701bf@sha256:e8583339e17d6d51f57d76315c15d1c1956f4cce1aade6546bac89c780e64767

--- a/components/go-mcjolxjg/overlays/development/deployment-patch.yaml
+++ b/components/go-mcjolxjg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-mcjolxjg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-mcjolxjg:495c48d9c39694417206eaaaabf647b909a701bf@sha256:e8583339e17d6d51f57d76315c15d1c1956f4cce1aade6546bac89c780e64767
+          name: container-image
